<resources>
    <string name="app_name">OrganizeYourself</string>
    <string name="email">email</string>
    <string name="password">pass</string>
    <string name="login">login</string>
    <string name="or_register">or_register</string>
    <string name="confirm_pass">cnfPass</string>
    <string name="register">register</string>
    <string name="or_login">or_log</string>
    <string name="email1">Email</string>
    <string name="pass">Password</string>
    <string name="orRegister">or Register</string>
</resources>
